pilot is king of the world